# tvtime

./: .cvsignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.CVS  README.UPGRADING  TODO  acinclude.m4  autogen.sh  bootstrap  config.c  config.h  configure.ac  default.tvtime  deinterlace.c  deinterlace.h  efs.cpp  efs.h  frequencies.c  frequencies.h  input.c  input.h  menu.c  menu.h  mixer.c  mixer.h  osd.c  osd.h  parser.c  parser.h  pnginput.c  pnginput.h  pngoutput.c  pngoutput.h  rtctimer.c  (+23 more)
data/: COPYING.DScaler  COPYING.FreeMonoBold  COPYING.tvtimeSansBold  FreeMonoBold.sfd  Makefile.am  Makefile.am.dlls  Makefile.am.nodlls  credits-with-png.ps  glyph_mappings.txt  tvtimeSansBold.pe  tvtimeSansBold.sfd
debian/: .cvsignore  README.Debian  changelog  config  control  copyright  dirs  doc-base  docs  examples  links  lintian.override  manpages  menu  postinst  postrm  rules  templates  undocumented  watch
debian/po/: cs.po  de.po  fr.po  ja.po  templates.pot  tr.po  vi.po
docs/: .cvsignore  CREDITS  DESIGN  Makefile.am  README.channels  TODO  build-requirements.txt  config.xml  cvstvtime  default.tvtime  default.tvtime.xml  default.tvtimerc  example.lircrc  frequencies.txt  glyph_mappings.txt  hardware-issues.txt  lirc.txt  makefreq.pl  menu-structure.txt  menusystem.txt  net-tvtime.desktop  quotes.txt  stationlist.xml.5  status-report-17-jan-2003.txt  status-report-20-feb-2003.txt  status-report-28-mar-2003.txt  survey.txt  tvtime-0.9.5.spec  tvtime-0.9.6.spec  tvtime-command.1  tvtime-configure.1  tvtime-modes.txt  tvtime-scanner.1  tvtime.1  tvtime.desktop  tvtime.xml.5  tvtimerc.5  tvtimerc.man
docs/html/: default.tvtime.xml  example.lircrc  hardware.html  help.html  index.html  lirc.html  problems.html  tvtime.css  usage.html  why.html  xmltv.html  zoran-email.txt
docs/man/: Makefile.am
docs/man/de/: stationlist.xml.5  tvtime-command.1  tvtime-configure.1  tvtime-scanner.1  tvtime.1  tvtime.xml.5
docs/man/en/: stationlist.xml.5  tvtime-command.1  tvtime-configure.1  tvtime-scanner.1  tvtime.1  tvtime.xml.5
docs/man/es/: Makefile.am  stationlist.xml.5  tvtime-command.1  tvtime-configure.1  tvtime-scanner.1  tvtime.1  tvtime.xml.5
intl/: .cvsignore
plugins/: .cvsignore  Makefile.am  double.c  dscaler_bob.c  dscaler_greedy.c  dscaler_greedy2frame.c  dscaler_greedyh.c  dscaler_oldgame.c  dscaler_tomsmocomp.c  dscaler_twoframe.c  dscaler_videobob.c  dscaler_videoweave.c  dscaler_weave.c  dscalerapi.h  gamedither.c  greedy.c  greedy2frame.c  greedyh.asm  greedyh.cpp  greedyh.h  kdetv_greedyh.c  kdetv_tomsmocomp.c  linear.c  linearblend.c  plugins.h  pointer.inc  scalerbob.c  simplemo.c  tomsmocomp.cpp  tomsmocomp.h  twoframe.c  vfir.c  videobob.c  weave.c  weavebff.c  weavetff.c  x86-64_macros.inc
plugins/tomsmocomp/: SearchLoop0A.inc  SearchLoopBottom.inc  SearchLoopEdgeA.inc  SearchLoopEdgeA8.inc  SearchLoopOddA.inc  SearchLoopOddA2.inc  SearchLoopOddA6.inc  SearchLoopOddAH.inc  SearchLoopOddAH2.inc  SearchLoopTop.inc  SearchLoopVA.inc  SearchLoopVAH.inc  StrangeBob.inc  TomsMoCompAll.inc  TomsMoCompAll2.inc  WierdBob.inc  tomsmocompfilter_3dnow.cpp  tomsmocompfilter_mmx.cpp  tomsmocompfilter_sse.cpp
po/: .cvsignore  LINGUAS  Makevars  POTFILES.in  cs.po  de.po  en@boldquot.po  en@quot.po  es.po  fi.po  fr.po  hu.po  ko.po  lv.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tvtime.pot
redhat/: custom-tvtime.desktop  tvtime-0.9.7.spec
src/: .cvsignore  DS_ApiCommon.h  DS_Deinterlace.h  DS_Filter.h  Makefile.am  bands.h  bugreport.c  bugreport.h  channels.c  channels.h  commands.c  commands.h  configsave.c  configsave.h  console.c  console.h  copyfunctions.c  copyfunctions.h  cpu_accel.c  cpuinfo.c  cpuinfo.h  credits.c  credits.h  credits.ps  debug_print.h  deinterlace.c  deinterlace.h  dfbmatroxtv.c  dfboutput.c  dfboutput.h  diffcomp.c  diffcomp.h  display.c  display.h  dscalerplugin.c  dscalerplugin.h  efs.cpp  efs.h  epg.c  epg.h  (+117 more)
src/wine/: Makefile  Makefile.am  Makefile.am.xine  afl.c  basetsd.h  config.h  debugtools.h  driver.c  elfdll.c  ext.c  heap.h  ldt_keeper.c  module.c  pe_image.c  pe_resource.c  registry.c  resource.c  vfl.c  vfw.h  win32.c  win32.h  windef.h
