
tvtimedatadir = $(pkgdatadir)
dist_tvtimedata_DATA = menubg.png testlogo.png FreeSansBold.ttf credits.png \
	FreeMono.ttf FreeMonoBold.ttf FreeMonoOblique.ttf DI_Greedy.dll \
	DI_GreedyH.dll DI_Greedy2Frame.dll DI_TwoFrame.dll DI_VideoBob.dll \
	DI_VideoWeave.dll DI_TomsMoComp.dll 

EXTRA_DIST = freefont-sfd.tar.gz
