# data/Makefile.am distributes the shared data files tvtime needs.
# Copyright (C) 2002, 2003  Billy Biggs
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

tvtimedatadir = $(pkgdatadir)
dist_tvtimedata_DATA = menubg.png testlogo.png FreeSansBold.ttf credits.png \
	FreeMono.ttf FreeMonoBold.ttf FreeMonoOblique.ttf DI_GreedyH.dll \
	DI_Greedy2Frame.dll DI_TwoFrame.dll DI_VideoWeave.dll DI_TomsMoComp.dll

EXTRA_DIST = freefont-sfd.tar.gz
